# Voice.ai

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  main.py
backend/ai/: router.py
backend/ai/services/: schema.py
backend/ai/services/voice/: speech_to_text.py
backend/ai/utils/: llm.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: aiBlob.tsx
frontend/src/hooks/: useAICanvas.tsx  useChatWithAI.tsx
frontend/src/utils/: clsx.ts
frontend/styles/: aiBlob.scss
frontend/types/: mic-recorder-to-mp3.d.ts
