[tool.poetry]
name = "khtxsm"
version = "0.1.0"
description = ""
authors = ["Marcus0086 <guptamarcus42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
openai = "^1.6.1"
langchain = "^0.0.352"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
