[tool.poetry]
name = "voice-ai"
version = "0.1.0"
description = ""
authors = ["Marcus0086 <guptamarcus42@gmail.com>"]
readme = "README.md"
packages = [{include = "voice"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.6.1"
langchain = "^0.0.352"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
